# VGL

./: CMakeLists.txt  IDEAS.txt  Makefile  NOTES.txt  README.txt  TODO.txt
doc/: ideas.txt
example/: Makefile  arcball.cpp  basic.cpp  draw.frag  draw.vert  example.cpp  imageview.cpp  modelinfo.cpp  perface.cpp  perface.f.glsl  perface.g.glsl  perface.v.glsl  pick.frag  pick.vert  picking.cpp  raymarch.cpp  shadowmap.cpp  stencil.cpp  styled.cpp
include/: vgl.h  vgl_camera.h  vgl_matrix4.h  vgl_quaternion.h
include/vgl/: arcballcamera.h  basecamera.h  camera.h  funcs.h  image.h  matrix3.h  matrix4.h  objparser.h  orthocamera.h  parser.h  plane3.h  plyparser.h  public.h  quaternion.h  ray3.h  renderer.h  utils.h  vec2.h  vec3.h  vec4.h  viewer.h
src/: arcballcamera.cpp  basecamera.cpp  camera.cpp  funcs.cpp  image.cpp  objparser.cpp  orthocamera.cpp  parser.cpp  plane3.cpp  plyparser.cpp  quaternion.cpp  ray3.cpp  utils.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vgl.h  vgl_arcballcamera.cpp  vgl_arcballcamera.h  vgl_basecamera.cpp  vgl_basecamera.h  vgl_camera.cpp  vgl_camera.h  vgl_funcs.cpp  vgl_funcs.h  vgl_image.cpp  vgl_image.h  vgl_math.cpp  vgl_math.h  vgl_matrix3.h  vgl_matrix4.h  vgl_objparser.cpp  vgl_objparser.h  vgl_orthocamera.cpp  vgl_orthocamera.h  vgl_parser.cpp  vgl_parser.h  vgl_plane3.cpp  vgl_plane3.h  vgl_plyparser.cpp  (+17 more)
test/: Makefile  test_quaternion.cpp
